--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="lib/baseutil.jar"/>
 	<classpathentry kind="lib" path="lib/itextpdf-5.5.5.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="lib/gson-2.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
