--- a/configuracao-proxy.json
+++ b/configuracao-proxy.json
@@ -1,1 +1,1 @@
-{"ativa" : "true", "host" : "127.0.0.1", "porta" : "8080", "login" : "login-usuario-proxy", "senha" : "senha-usuario-proxy"}
+{"ativa" : "false", "host" : "127.0.0.1", "porta" : "8080", "login" : "login-usuario-proxy", "senha" : "senha-usuario-proxy"}
